--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,11 @@
   margin-top: 25%;
 }
 
-#time-txt{
+#search-input {
+  border-color: gray;
+}
+
+#time-txt {
   font-size: small;
   color: var(--fonts-color-white);
   top: 20px;
