--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,17 @@
   right: 60px;
 }
 
+#prev-w {
+  position: absolute;
+  top: 20px;
+  right: 100px;
+}
+
+#prev-w:hover {
+  background-color: var(--hover-transp);
+  border-radius: 5px;
+}
+
 .menuPi:hover {
   background-color: var(--hover-transp);
   border-radius: 5px;
@@ -76,7 +87,7 @@
 .dwst{
   position: absolute;
   top: 19px;
-  right: 100px;
+  right: 140px;
 }
 
 .dwst:hover{
@@ -102,14 +113,13 @@
 
 /* web preview */
 
-#view-i{
+#view-i {
+  color: var(--fonts-color-white);
+  background-color: black;
   height: 50%;
   width: 100%;
   bottom: 50px;
   position: absolute;
-  border-right: transparent;
-  border-left: transparent;
-  border-bottom: transparent;
-  border-color: gray;
+  border: transparent;
   z-index: 9;
 }
